--- a/content/About.html
+++ b/content/About.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
         <head>
-        <title>cd_hw</title>
+        <title>cdproject</title>
         <meta charset="utf-8">
 <meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -111,14 +111,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container">
                 <div class="row align-items-center">
-                <h1>cd2025 協同產品設計實習學員網站</h1>
+                <h1>cdproject 分組網站</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">cd2025 協同產品設計實習學員網站</a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">cdproject 分組網站</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Homework.html'>Homework</a><ul class='dropdown'><li><a href='HW1.html'>HW1</a><li><a href='HW2.html'>HW2</a><li><a href='HW3.html'>HW3</a></li></ul><li><a href='Midterm.html'>Midterm</a><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='Exam1.html'>Exam1</a><li><a href='Exam2.html'>Exam2</a><li><a href='Exam3.html'>Exam3</a></li></ul><li><a href='Final.html'>Final</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Final.html'>Final</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,10 +142,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Homework.html'>Next</a> >> Homework<br /><h1>About</h1>
+    <div id="tipue_search_content"> <a href='Final.html'>Next</a> >> Final<br /><h1>About</h1>
 <p>課程名稱: 協同產品設計實習 - Collaborative Product Design Practice</p>
-<p>學員作業網站: (請自行填寫)</p>
-<p>學員作業倉儲: (請自行填寫)</p>
+<p>2a or 2b 第幾組網站: (請自行填寫)</p>
+<p>2a or 2b 第幾組倉儲: (請自行填寫)</p>
 <hr/>
 <p>課程代號: cd2025</p>
 <p>Teams 線上教學:</p>
@@ -155,9 +155,7 @@ img.add_border {
 <p>課程評分:</p>
 <p style="padding-left: 30px;">Homework (30%) - 每週至少提交兩次與課程進度有關的內容, 完成後填回自評表單</p>
 <p style="padding-left: 30px;">Exam (40%) - 建立包含操作流程影片、心得以及提供檔案下載的網頁後填回自評表單</p>
-<p style="padding-left: 30px;">Final Report (30%) - 利用網頁內容進行簡報並提交 pdf 格式書面報告, 完成後填回自評表單</p>
-<p></p>
-<br /> <a href='Homework.html'>Next</a> >> Homework</div>
+<p style="padding-left: 30px;">Final Report (30%) - 利用網頁內容進行簡報並提交 pdf 格式書面報告, 完成後填回自評表單</p><br /> <a href='Final.html'>Next</a> >> Final</div>
         
     <!-- footer -->
       <div class="container">
